--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
     "emailjs": "^4.0.3",
     "emailjs-com": "^3.2.0",
     "react-icons": "^5.3.0",
+    "react-router": "^6.27.0",
     "react-router-dom": "^6.27.0",
+    "react-scroll": "^1.9.0",
+    "react-scroller": "^0.0.3",
     "react-slick": "^0.30.2",
     "react-toastify": "^10.0.6",
     "slick-carousel": "^1.8.1"
